--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,4 +16,5 @@ install:
 
 build_script:
   - chmod +x gradlew
-  - ./gradlew test -Dselenide.headless=true # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test -Dselenide.headless=true --info # запускаем тест, флаг --info позволяет выводить больше информации
+
